# loom

./: .gitignore  .gitmodules  CMakeLists.txt  wrapper.py
.github/workflows/: build.yml
cmake/: mingw-toolchain.cmake
src/: CMakeLists.txt  Python.cpp
src/dot/: CMakeLists.txt  Dot2TgMain.cpp  Parser.cpp
src/dot/tests/: CMakeLists.txt
src/gtfs2graph/: CMakeLists.txt  Gtfs2GraphMain.cpp
src/gtfs2graph/config/: GraphBuilderConfig.h
src/gtfs2graph/tests/: CMakeLists.txt
src/loom/: Bindings.cpp  CMakeLists.txt  Loom.cpp  Loom.h  LoomMain.cpp  LoomMain.h
src/loom/config/: ConfigReader.cpp  ConfigReader.h  LoomConfig.h
src/loom/tests/: CMakeLists.txt
src/octi/: Bindings.cpp  CMakeLists.txt  Octi.cpp  Octi.h  OctiMain.cpp  OctiMain.h  Octilinearizer.cpp
src/octi/config/: ConfigReader.cpp  ConfigReader.h  OctiConfig.h
src/octi/tests/: CMakeLists.txt
src/shared/: CMakeLists.txt
src/shared/config/: ConfigReader.h  ConfigReader.tpp  JsonConfigHelper.h
src/shared/linegraph/: LineGraph.cpp  LineGraph.h
src/shared/rendergraph/: RenderGraph.cpp
src/shared/tests/: CMakeLists.txt
src/topo/: Bindings.cpp  CMakeLists.txt  Topo.cpp  Topo.h  TopoMain.cpp  TopoMain.h
src/topo/config/: ConfigReader.cpp  ConfigReader.h  TopoConfig.h
src/topo/mapconstructor/: MapConstructor.cpp  MapConstructor.h
src/topo/restr/: RestrInferrer.cpp  RestrInferrer.h
src/topo/statinserter/: StatInserter.cpp  StatInserter.h
src/topo/tests/: CMakeLists.txt
src/topoeval/: CMakeLists.txt  TopoEvalMain.cpp
src/transitmap/: CMakeLists.txt  TransitMap.cpp  TransitMap.h
src/transitmap/config/: TransitMapConfig.h
src/transitmap/tests/: CMakeLists.txt
test/: run_tests.sh  test_wrapper_integration.py
test/outputs/: berlin.out  chicago.out  freiburg.out  stuttgart.out  sydney.out  wien.out
